--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.archetype</groupId>
+            <artifactId>archetype-descriptor</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
